--- a/products.html
+++ b/products.html
@@ -75,7 +75,7 @@
                 <div class="content">
                     <h3>DRY FRUIT CREAM MAVA MALAI CADBURY GOLA</h3>
 
-                    <!-- <a href="#" class="btn">see more</a> -->
+                    <!-- <a href="#" class=" ">see more</a> -->
                 </div>
             </div>
             <div class="box">
@@ -178,7 +178,8 @@
                 </div>
             </div>
         </div>
-
+      
+         
     </section>
     <section class="footer">
 
@@ -187,6 +188,8 @@
             all rights reserved! </h1>
 
     </section>
+
+
 
 </body>
 
