--- a/index.html
+++ b/index.html
@@ -321,6 +321,10 @@
         
     </div>
 
+    <!-- <div class="loader-container">
+        <img src="video/food_gif.gif" alt="">
+    </div> -->
+
 
     <section class="footer">
         
